@@ -3030,7 +3030,7 @@ rendered incorrectly, or cause your @R{} code to give an error.
 For documentation, marking the encoding and including @acronym{ASCII}
 transliterations is likely to do a reasonable job.
 
-Function @code{showNonASCII} in package @pkg{tools} can help in
+Function @code{showNonASCIIfile} in package @pkg{tools} can help in
 finding non-@acronym{ASCII} bytes in files.
 
 
@@ -4863,7 +4863,7 @@ Wherever possible, avoid non-@acronym{ASCII} chars in @file{Rd} files, and
 even symbols such as @samp{<}, @samp{>}, @samp{$}, @samp{^}, @samp{&},
 @samp{|}, @samp{@@}, @samp{~}, and @samp{*} outside verbatim
 environments (since they may disappear in fonts designed to render
-text).  (Function @code{showNonASCII} in package @pkg{tools} can help
+text).  (Function @code{showNonASCIIfile} in package @pkg{tools} can help
 in finding non-@acronym{ASCII} bytes in the files.)
 
 For convenience, encoding names @samp{latin1} and @samp{latin2} are
